2006-01-20  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* input/regression/tie-chord.ly: use generateTiePattern to
	simplify file.

	* lily/tie-formatting-problem.cc (peak_around): new function.
	(score_configuration): use sliding criterion for staff line collisions. 
	(score_configuration): idem for dot collisions.
	(generate_configuration): use separate stem_gap for gap to stem.

	* lily/include/tie-formatting-problem.hh (struct Tie_details):
	separate penalty factors for x and y distance.
	(struct Tie_details): separate penalties for tip and center line collisions.

2006-01-19 Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/tie-formatting-problem.cc (generate_configuration): make
	large ties avoid stafflines in the horizontal section.
	(score_configuration): use softcoded penalties
	(score_aptitude): idem.

	* lily/tie-helper.cc (from_grob): softcode tie details

	* lily/staff-symbol-referencer.cc (on_staff_line): new function

	* lily/staff-symbol-referencer.cc (on_line): rename from
	on_staffline 

2006-01-18  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* ly/music-functions-init.ly: remove duplicate tag.

	* lily/include/*.hh: GCC 4.1 fixes.

006-01-16  Erlend Aasland  <erlenda@gmail.com>

	* Documentation/user/global.itely: fix typos; @bugs -> @refbugs

	* scm/define-music-types.scm: fix bug in desc. string
	for OverrideProperty

2006-01-15 Erik Sandberg  <mandolaerik@gmail.com>

	* scripts/lilypond-book.py: bugfix

	* scm/define-music-types.scm: fix typos.

2006-01-14  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/ basic-notation.itely, global.itely,
	advanced-notation.itely, instrument-notation.itely: small
	additions (bugs and commonly tweaked properties).

2006-01-13  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* stepmake/stepmake/generic-vars.make (MINGW_BUILD): generic
	detection of mingw build.
	(MINGW_BUILD): opps.

2006-01-12  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/stepmake/generic-vars.make (MINGW_BUILD): Add
	i686-mingw32.
